--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
         }
 
         .youtube {
-            background-image: url('https://cdn-icons-png.flaticon.com/512/152/152810.png');
+            background-image: url('youtube.png');
             filter: invert(1);
         }
 
         .linkedin {
-            background-image: url('https://static.vecteezy.com/system/resources/previews/018/930/482/non_2x/linkedin-logo-linkedin-icon-transparent-free-png.png');
+            background-image: url('linked_in.png');
             filter: invert(1);
         }
 
         .cv {
-            background-image: url('https://cdn-icons-png.flaticon.com/512/36/36049.png');
+            background-image: url('cv.png');
             filter: invert(1);
         }
 
