--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <section class="hero">
         <div id="bgVideoContainer">
             <iframe id="bgVideo" width="560" height="315"
-            src="https://www.youtube-nocookie.com/embed/04q1LKgyDAg??start=58&vq=hd2160&autoplay=1&color=white&controls=0&disablekb=1&fs=0&loop=1&modestbranding=1&mute=1&autohide=1&playlist=04q1LKgyDAg&playsinline=1&rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen">
+            src="https://www.youtube-nocookie.com/embed/04q1LKgyDAg?start=58&vq=hd2160&autoplay=1&color=white&controls=0&disablekb=1&fs=0&loop=1&modestbranding=1&mute=1&autohide=1&playlist=04q1LKgyDAg&playsinline=1&rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen">
             </iframe>
         </div>
         <div class="overlay"></div>
