--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <a href="https://www.youtube.com/@gabrielhencz" target="_blank" class="icon-link">
                 <div class="icon youtube"></div>
             </a>
-            <a href="add_cv_here.pdf" target="_blank" class="icon-link">
+            <a href="GabrielHencz_CV_2025.pdf" target="_blank" class="icon-link">
                 <div class="icon cv"></div>
             </a>
         </footer>
