--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
 
         <!-- Visitor Counter -->
         <div class="visitor-counter">
-            <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=127fefcb4285d036e2ad62aeb92f0b8d35cb619c'></script>
-            <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1305068/t/1"></script>
+            <script type="text/javascript" src="https://counter.websiteout.com/js/36/0/0/1"></script>
         </div>
 
         <footer class="footer">
